class PathNotExistException(Exception): pass
class MissingColumnsException(Exception): pass

class ServiceNotFound(Exception): pass